MCP-1983: refactoring to camel routes